CRUD for Helm Forwarder (#36)
* cleaned up convert

* goes through entire tiller list

* fixing the gen makefile

* proper protobuf time parsing

* restored the charts stuff in swagger

* charts included when List Releases called

* posted first release

* CRUD on tillers proven, must connect to body

* attempts to work with flat Chart and Value

* working CRUD on releases with tar being uploaded on POST and PUT
