# api/v0/handlers/post_releases.go
@@ -3,8 +3,10 @@ package handlers
 import (
 	"fmt"
 	"path"
+	"time"
 
 	"github.com/go-openapi/runtime/middleware"
+	"wwwin-github.cisco.com/edge/optikon-api/api/v0/helm"
 	"wwwin-github.cisco.com/edge/optikon-api/api/v0/mock"
 	"wwwin-github.cisco.com/edge/optikon-api/api/v0/server/restapi"
 	"wwwin-github.cisco.com/edge/optikon-api/api/v0/server/restapi/operations/releases"
@@ -20,6 +22,16 @@ func (d *addRelease) Handle(params releases.AddReleasesParams) middleware.Respon
 	fmt.Printf("AddReleases\n")
 	if restapi.MockBasePath != "" {
 		return d.MockHandle(params)
+	}
+
+	// TODO Async this
+	for _, tiller := range restapi.TillersList {
+		tillerClient := helm.NewTillerClient(5 * time.Second)
+		err := tillerClient.InstallRelease(tiller, &params.ChartTar, params.Name, params.Namespace)
+		if err != nil {
+			fmt.Printf("Failed to install Release: %v\n", err)
+			return releases.NewAddReleasesInternalServerError()
+		}
 	}
 	return releases.NewAddReleasesCreated()
 }
