# api/v0/handlers/update_release.go
@@ -3,8 +3,10 @@ package handlers
 import (
 	"fmt"
 	"path"
+	"time"
 
 	"github.com/go-openapi/runtime/middleware"
+	"wwwin-github.cisco.com/edge/optikon-api/api/v0/helm"
 	"wwwin-github.cisco.com/edge/optikon-api/api/v0/mock"
 	"wwwin-github.cisco.com/edge/optikon-api/api/v0/server/restapi"
 	"wwwin-github.cisco.com/edge/optikon-api/api/v0/server/restapi/operations/releases"
@@ -21,6 +23,17 @@ func (d *updateRelease) Handle(params releases.UpdateReleaseParams) middleware.R
 	if restapi.MockBasePath != "" {
 		return d.MockHandle(params)
 	}
+
+	// TODO Async this
+	for _, tiller := range restapi.TillersList {
+		tillerClient := helm.NewTillerClient(5 * time.Second)
+		err := tillerClient.UpdateRelease(tiller, params.ReleaseID, &params.ChartTar)
+		if err != nil {
+			fmt.Printf("Failed to install Release: %v\n", err)
+			return releases.NewUpdateReleaseInternalServerError()
+		}
+	}
+
 	return releases.NewUpdateReleaseOK()
 }
 
