# api/v0/models/release_dependencies.go
@@ -1,78 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
-)
-
-// ReleaseDependencies release dependencies
-// swagger:model release.Dependencies
-type ReleaseDependencies struct {
-
-	// alias
-	Alias string `json:"Alias,omitempty"`
-
-	// condition
-	Condition string `json:"Condition,omitempty"`
-
-	// name
-	Name string `json:"Name,omitempty"`
-
-	// repository
-	Repository string `json:"Repository,omitempty"`
-
-	// tags
-	Tags []string `json:"Tags"`
-
-	// version
-	Version string `json:"Version,omitempty"`
-}
-
-// Validate validates this release dependencies
-func (m *ReleaseDependencies) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateTags(formats); err != nil {
-		// prop
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ReleaseDependencies) validateTags(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Tags) { // not required
-		return nil
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ReleaseDependencies) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ReleaseDependencies) UnmarshalBinary(b []byte) error {
-	var res ReleaseDependencies
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
