# api/v0/models/release_template.go
@@ -1,52 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
-)
-
-// ReleaseTemplate release template
-// swagger:model release.Template
-type ReleaseTemplate struct {
-
-	// data
-	Data strfmt.Base64 `json:"Data,omitempty"`
-
-	// name
-	Name string `json:"Name,omitempty"`
-}
-
-// Validate validates this release template
-func (m *ReleaseTemplate) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ReleaseTemplate) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ReleaseTemplate) UnmarshalBinary(b []byte) error {
-	var res ReleaseTemplate
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
