# api/v0/server/restapi/operations/releases/update_release_parameters.go
@@ -6,6 +6,7 @@ package releases
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
+	"mime/multipart"
 	"net/http"
 
 	"github.com/go-openapi/errors"
@@ -13,8 +14,6 @@ import (
 	"github.com/go-openapi/runtime/middleware"
 
 	strfmt "github.com/go-openapi/strfmt"
-
-	"wwwin-github.cisco.com/edge/optikon-api/api/v0/models"
 )
 
 // NewUpdateReleaseParams creates a new UpdateReleaseParams object
@@ -33,11 +32,12 @@ type UpdateReleaseParams struct {
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*
-	  In: body
+	/*The file to upload
+	  Required: true
+	  In: formData
 	*/
-	Body *models.ReleaseRelease
-	/*ID of release to return
+	ChartTar runtime.File
+	/*ID of release to update
 	  Required: true
 	  In: path
 	*/
@@ -50,21 +50,21 @@ func (o *UpdateReleaseParams) BindRequest(r *http.Request, route *middleware.Mat
 	var res []error
 	o.HTTPRequest = r
 
-	if runtime.HasBody(r) {
-		defer r.Body.Close()
-		var body models.ReleaseRelease
-		if err := route.Consumer.Consume(r.Body, &body); err != nil {
-			res = append(res, errors.NewParseError("body", "body", "", err))
-		} else {
-			if err := body.Validate(route.Formats); err != nil {
-				res = append(res, err)
-			}
-
-			if len(res) == 0 {
-				o.Body = &body
-			}
+	if err := r.ParseMultipartForm(32 << 20); err != nil {
+		if err != http.ErrNotMultipart {
+			return err
+		} else if err := r.ParseForm(); err != nil {
+			return err
 		}
+	}
 
+	chartTar, chartTarHeader, err := r.FormFile("chartTar")
+	if err != nil {
+		res = append(res, errors.New(400, "reading file %q failed: %v", "chartTar", err))
+	} else if err := o.bindChartTar(chartTar, chartTarHeader); err != nil {
+		res = append(res, err)
+	} else {
+		o.ChartTar = runtime.File{Data: chartTar, Header: chartTarHeader}
 	}
 
 	rReleaseID, rhkReleaseID, _ := route.Params.GetOK("releaseId")
@@ -75,6 +75,11 @@ func (o *UpdateReleaseParams) BindRequest(r *http.Request, route *middleware.Mat
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (o *UpdateReleaseParams) bindChartTar(file multipart.File, header *multipart.FileHeader) error {
+
 	return nil
 }
 
